Swagger put e delete
